--- a/.github/workflows/auto-notes.yml
+++ b/.github/workflows/auto-notes.yml
@@ -2,7 +2,7 @@ name: Docker & Linux Learning Log
 
 on:
   schedule:
-    - cron: '0 6 * * *'
+    - cron: '0 6 * * *'   # Runs once per day at 06:00 UTC
   workflow_dispatch:
 
 jobs:
@@ -10,30 +10,39 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Generate learning note
         run: |
           mkdir -p docs
 
+          # Get the first commit date safely
           START_DATE=$(git log --reverse --format=%cs | head -n 1)
-          TODAY=$(date +%s)
-          START=$(date -d "$START_DATE" +%s)
-          DAYS=$(( (TODAY - START) / 86400 ))
 
+          if [ -z "$START_DATE" ]; then
+            DAYS=0
+          else
+            TODAY=$(date +%s)
+            START=$(date -d "$START_DATE" +%s)
+            DAYS=$(( (TODAY - START) / 86400 ))
+          fi
+
+          # First ~60 days: Docker
           if [ "$DAYS" -lt 60 ]; then
             FILE="docs/docker.md"
             echo "" >> $FILE
             echo "### Day $DAYS – Docker Basics" >> $FILE
-            echo "- Docker is a containerization tool that packages applications with dependencies." >> $FILE
-            echo "- Core concepts: image, container, Dockerfile." >> $FILE
+            echo "- Docker is a containerization tool that packages applications with all dependencies." >> $FILE
+            echo "- Core concepts include images, containers, Dockerfiles, and registries." >> $FILE
+
+          # After that: Linux
           else
             FILE="docs/linux.md"
             echo "" >> $FILE
             echo "### Day $DAYS – Linux Fundamentals" >> $FILE
-            echo "- Linux is the foundation of cloud and container platforms." >> $FILE
-            echo "- Common commands: ls, cd, ps, top, grep." >> $FILE
+            echo "- Linux is the foundation of cloud servers and container platforms." >> $FILE
+            echo "- Common commands include ls, cd, ps, top, grep, and chmod." >> $FILE
           fi
 
       - name: Commit changes
